# mod_yandex_transcribe

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
conf/: yandex-transcribe.conf.xml
examples/: mod_vosk.c
include/: YandexIamToken.h  YandexSttSession.h  yandex_iam_token.h  ytg_bindings.h
lib/: CMakeLists.txt
lib/yandex-cloudapi/: CMakeLists.txt
src/: YandexIamToken.cpp  YandexSttSession.cpp  mod_yandex_transcribe.c  yandex_iam_token.cpp
tests/: config.h.in  iamtoken_tests.cpp
